--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     },
     "require": {
         "php": ">=7.0",
-        "odesk/phystrix": "~1.0",
-        "symfony/http-kernel": "~2.5|~3.0|~4.0",
-        "symfony/dependency-injection": "~2.5|~3.0|~4.0",
-        "symfony/config": "~2.5|~3.0|~4.0"
+        "odesk/phystrix": "^1.0|^2.0",
+        "symfony/http-kernel": "~2.5|~3.0|~4.0|~5.0",
+        "symfony/dependency-injection": "~2.5|~3.0|~4.0|~5.0",
+        "symfony/config": "~2.5|~3.0|~4.0|~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2"
