--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     "require": {
         "php": ">=7.0",
         "odesk/phystrix": "^1.0|^2.0",
-        "symfony/http-kernel": "~2.5|~3.0|~4.0|~5.0",
-        "symfony/dependency-injection": "~2.5|~3.0|~4.0|~5.0",
-        "symfony/config": "~2.5|~3.0|~4.0|~5.0"
+        "symfony/http-kernel": "~4.4|~5.0",
+        "symfony/dependency-injection": "~4.4|~5.0",
+        "symfony/config": "~4.4|~5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.2"
+        "phpunit/phpunit": "^9.2"
     }
 }
