Added static analysis, php: ^7.4 minumum requirement, symfony: ^5.0 minimum requirement.

--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -21,6 +21,7 @@ services:
       - "%phystrix.configuration.data%"
 
   phystrix.service_locator:
+    public: true
     class: "%phystrix.service_locator.class%"
 
   phystrix.state_storage:
@@ -43,6 +44,7 @@ services:
     class: "%phystrix.request_log.class%"
 
   phystrix.command_factory:
+    public: true
     class: "%phystrix.command_factory.class%"
     arguments:
       - "@phystrix.configuration"
