--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,38 @@
 {
-    "name": "pixelfederation/phystrix-bundle",
-    "description": "Phystrix integration with Symfony2 framework.",
-    "type": "symfony-bundle",
-    "license": "Apache-2.0",
-    "keywords": ["odesk", "phystrix", "symfony"],
-    "autoload": {
-        "psr-4": { "Odesk\\Bundle\\PhystrixBundle\\": "" }
-    },
-    "require": {
-        "php": ">=7.0",
-        "odesk/phystrix": "^1.0|^2.0",
-        "symfony/http-kernel": "~4.4|~5.0",
-        "symfony/dependency-injection": "~4.4|~5.0",
-        "symfony/config": "~4.4|~5.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.2"
+  "name": "pixelfederation/phystrix-bundle",
+  "description": "Phystrix integration with Symfony2 framework.",
+  "type": "symfony-bundle",
+  "license": "Apache-2.0",
+  "keywords": [
+    "odesk",
+    "phystrix",
+    "symfony"
+  ],
+  "autoload": {
+    "psr-4": {
+      "Odesk\\Bundle\\PhystrixBundle\\": "src/"
     }
+  },
+  "require": {
+    "php": ">=7.4",
+    "odesk/phystrix": "^2.0",
+    "symfony/http-kernel": "^5.0",
+    "symfony/dependency-injection": "^5.0",
+    "symfony/config": "^5.0",
+    "symfony/yaml": "^5.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "slevomat/coding-standard": "^6.0",
+    "friendsofphp/php-cs-fixer": "^2.18",
+    "php-parallel-lint/php-parallel-lint": "^1.2",
+    "nikic/php-parser": "^4.10",
+    "phpcompatibility/php-compatibility": "^9.3",
+    "phpmd/phpmd": "^2.9",
+    "phpro/grumphp": "^1.3",
+    "roave/security-advisories": "dev-master",
+    "squizlabs/php_codesniffer": "3.5.6",
+    "vimeo/psalm": "^4.6",
+    "sensiolabs/security-checker": "^6.0"
+  }
 }
