--- a/grumphp.yml
+++ b/grumphp.yml
@@ -3,6 +3,8 @@ grumphp:
   stop_on_failure: true
   process_timeout: 600
   ignore_unstaged_changes: true
+  git_hook_variables:
+    EXEC_GRUMPHP_COMMAND: './bin/grumphp_hooks/environment_spinup && docker exec -i php-phystrix-bundle'
   tasks:
     phpcs:
       standard: 'phpcs.ruleset.xml'
