--- a/grumphp.yml
+++ b/grumphp.yml
@@ -4,7 +4,7 @@ grumphp:
   process_timeout: 600
   ignore_unstaged_changes: true
   git_hook_variables:
-    EXEC_GRUMPHP_COMMAND: './bin/grumphp_hooks/environment_spinup && docker exec -i php-phystrix-bundle'
+    EXEC_GRUMPHP_COMMAND: './bin/grumphp_hooks/environment_spinup && docker exec -i phystrix-bundle-php'
   tasks:
     phpcs:
       standard: 'phpcs.ruleset.xml'
