--- a/src/Resources/config/config.yml
+++ b/src/Resources/config/config.yml
@@ -59,4 +59,4 @@ services:
     arguments:
       - "@phystrix.request_log"
     tags:
-      - { name: data_collector, template: "OdeskPhystrixBundle:Collector:phystrix", id: "phystrix"}
+      - { name: data_collector, template: "@OdeskPhystrix/Collector/phystrix.html.twig", id: "phystrix"}
